5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1828_1648.log
== TEST (2019-06-12 14:14:53) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(size(aulas)):
	x = 0
	if(aula[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
for i in range(size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet = aulas[i]
		y = y + 1
print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:15:07) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(size(aulas)):
	x = 0
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
for i in range(size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet = aulas[i]
		y = y + 1
print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:56) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	x = 0
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:07) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	x = 0
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)

for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet = vet + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:58) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

x= x + 1
for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:14) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

x = x + 1
for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:41) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		i = i + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:50) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		i = i + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(i)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:27) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:23:46) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	x = 0
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:24:33) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		print(i)

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:24:40) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		print(i)

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(i)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:24:59) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:25:34) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i + 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:25:42) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(size(aulas), dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:59) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet[i] = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:28:16) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet = i 

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:28:37) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):
	if(aulas[i]< 70):
		vet = vet[i] 

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:28) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(y, dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		y = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:46) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		y = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:06) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		y = aulas[i] + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:23) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = ""
for i in range(size(aulas)):
	if(aulas[i]< 70):
		y = aulas[i] + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:45) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		y = i

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:32:19) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(size(aulas)):
	if(aulas[i]< 70):
		y = vet[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:32:36) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		y = vet[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:38) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		y = vet[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:47) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:19) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:23) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:52) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:56) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:14) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:30) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = [i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:34) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = [i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:52) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:58:14) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = vet[0]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:58:18) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = vet[0]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:27) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):

	if(aulas[i]< 70):
		aulas[i] = aulas[i] 

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:47) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		aulas[i] = aulas[i] 

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:07) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		aulas[i] = vet[i] 

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:24) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		aulas[i] = size(x)

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:39) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		aulas[i] = i

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:58) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		vet = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:17) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		vet[i] = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:31) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):

	if(aulas[i]< 70):
		vet = aulas[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:49) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:08) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet = aulas[i]
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:35) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] =  vet[i] + aulas[i]  
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:00) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[0] = aulas[i]  
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:19) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet = aulas[i]  
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:33) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i]  
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:44) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i]  
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:59) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = i 
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:22) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = 
	y = y + 1

print(x)
print(vet)
		
-- ERROR:
File "XXXX", line 13
    vet[i] = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:34) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = alunos[i]
	y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:51) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i]
	y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:33) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
	vet[i] = y[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:42) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
	vet[i] = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:21:25) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:36) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:53) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:59) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:17) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
	vet = y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:50) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet = y + vet[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:01) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = y + vet[i]

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:30) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:40) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:55) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(x)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:11) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:35) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
	vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:28) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:40) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas[i])):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:55) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas[i])):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		 vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
File "XXXX", line 14
    vet[i] = vet[i] + y
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:58) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas[i])):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:19) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(aulas)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:35) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:57) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:09) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = y + 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:31) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = y - 1
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:54) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = vet[i] + y

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:31:22) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = y + vet[i]

print(x)
print(vet)
		
-- EXECUTION TIME:
0.965391
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:09) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(vet)):
	if(aulas[i]< 70):
		y = y + 1

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:42:02) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(vet)):
	if(aulas[i]< 70):
		y = y + 1 
	

print(x)
print(vet[i])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:42:29) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(vet)):
	if(aulas[i]< 70):
		y = y + 1 
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:43:46) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(vet)):
	if(aulas[i]< 70):
		vet[i] = vet[i] + i
		y = y + 1 
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:03) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)
y = 0
for i in range(0, size(vet)):
	if(aulas[i]< 70):
		vet[i] = vet[i] + i
		y = y + 2 
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:22) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = vet[i] + i
		y = y + 1
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:48) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i] + i
		y = y + 1
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:09) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i] + i
		y = y + 1
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:22) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i] 
		y = y + 1
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:39) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i] 
		
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:46:05) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = aulas[i] 
		
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:46:26) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet = vet[i] +aulas[i] 
		
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:46:40) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		vet[i] = vet[i] + aulas[i] 
		
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:47:15) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = vet[i] + aulas[i] 
		
	

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:48:13) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))

for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = i - 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = vet[i] + aulas[i] 
		

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 08:51:29) 
-- CODE:
from numpy import*
aulas = array(eval(input("Aulas frequentadas: ")))
x = 0
for i in range(0, size(aulas)):
	if(aulas[i]< 70):
		x = x + 1

vet = zeros(x, dtype=int)

for i in range(0, size(vet)):
	y = 0
	if(aulas[i]< 70):
		y = vet[i] + aulas[i] 
		

print(x)
print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
